--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,20 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  <h1>
-    Welcome to {{ title }}!
+  <h1 class="mat-display-3">
+    {{ title }}
   </h1>
-  <img width="50" alt="Pool Requests" src="assets/pull_icon.png">
+  <img width="50" alt="Pull Party" src="assets/pull_icon.png">
 </div>
 
 <div>
   <h2>Latest PRs</h2>
 
-  <li *ngFor="let pull of pullRequestsResponse | async">{{pull.title}} - {{pull.created_at}} - {{pull.isReviewed}} </li>
+  <div *ngFor="let pull of pullRequests">
+    <a href="{{pull.html_url}}" target="_blank" style="text-decoration:none">
+    <mat-card style="margin-bottom:8px;">
+      <mat-card-title>{{pull.title}}</mat-card-title>
+      <mat-card-subtitle>{{pull.user.login}} - {{pull.created_at}} - {{pull.timeSinceCreation}}</mat-card-subtitle>
+    </mat-card>
+  </a>
+  </div>
 </div>
