--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,28 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1 class="mat-display-3">
+<div style="margin-bottom:16px;">
+  <h1 class="mat-display-3" style="width:20%;display: inline">
     {{ title }}
   </h1>
-  </div>
 
+  <img src="assets/pool.png" style="height:60px"/>
+
+  <mat-form-field style="float:right">
+    <mat-select [(value)]="selectedRepo" (change)="pollForRequests()">
+      <mat-option value="ring-android">Android</mat-option>
+      <mat-option value="ring-ios">iOS</mat-option>
+    </mat-select>
+  </mat-form-field>
+</div>
 <div>
-    <div *ngFor="let pull of pullRequests">
+  <div *ngFor="let pull of pullRequests">
     <a href="{{pull.html_url}}" target="_blank" style="text-decoration:none">
-    <mat-card style="margin-bottom:8px;" [ngStyle]="cardBackground(pull)">
-      <mat-card-title>{{pull.title}}</mat-card-title>
-      <mat-card-subtitle>{{pull.user.login}} - {{pull.created_at | date:'short'}} </mat-card-subtitle>
-    </mat-card>
-  </a>
+      <mat-card style="margin-bottom:8px;" [ngStyle]="cardBackground(pull)">
+        <mat-card-title>{{pull.title}}</mat-card-title>
+        <mat-card-subtitle>{{pull.created_at | date:'short'}} - {{pull.user.login}}</mat-card-subtitle>
+      </mat-card>
+    </a>
+  </div>
+  <div *ngIf="retrievalInProgress" style="margin:auto; width:30%">
+    <mat-spinner style="margin:auto;"></mat-spinner>
   </div>
 </div>
