--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
   <img src="assets/pool.png" style="height:60px" />
 
   <div style="float:right">
-    <div><img src="assets/refresh.png" style="height:30px;float:left;cursor:pointer;" (click)="retrievePullRequests()" />
+    <div><img title="Refresh" src="assets/refresh.png" style="height:30px;float:left;cursor:pointer;" (click)="retrievePullRequests()" />
     </div>
     <div class="mat-caption">
       Updated: {{lastUpdatedTimestamp | date:'medium'}}
